# WeatherChecker

./:  (2).env  .gitignore  1.py  README.md  alors.py  app.py  bonnnn.py  euh.py  goals1.py  goalsA.py  lebon.py  main.py  maybe.py  météo.py  pyproject.toml  requirements.txt  settings.json  test.py  test2.py  test3.py  test5.py  test6.py  weather_checker.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
