[tool.poetry]
name = "weatherchecker"
version = "0.1.0"
description = "A Streamlit app for checking weather and displaying local time for cities."
authors = ["bitan <elishevagrace93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pytz = "^2024.2"
timezonefinder = "^6.5.7"
matplotlib = "^3.10.0"
folium = "^0.19.3"
streamlit-folium = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
